Stop image overflowing.

--- a/django/website/main/static/scss/standard.scss
+++ b/django/website/main/static/scss/standard.scss
@@ -31,3 +31,7 @@ footer {
     color: $accent-color;
 }
 
+/* CONTENT */
+img {
+    width: 100%; /* Responsive images */
+}
